# CH341a_spi_programmer

./: CH341a.pro  CMakeLists.txt  README.md  ch341a.c  ch341a.h  dialogrp.cpp  dialogrp.h  dialogsp.cpp  dialogsp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  recource.qrc
CH341a_appimage/: CH341a.appimage
img/: CH341a_spi.desktop
other/: CH341SPI.desktop
